ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/parserRealSource9/input.ts.stderr
error: Unexpected token `]`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
  --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/parserRealSource9/input.ts:12:40
   |
12 |                 extendsList = new Type[];
   |                                        ^

